<?xml version="1.0" encoding="utf-8"?>
<resources>
	
    <string name="app_name">RainCheque</string>
    <string name="action_help">Help</string>
    <string name="active_sessions">Active sessions</string>
	<string name="closed_sessions">Closed sessions</string>	
	<string name="new_session">Create new session</string>
	<string name="edit_session">Edit session name</string>	
	<string name="new_session_title">New session</string>	
	<string name="session_log">Session log</string>
	<string name="session_name">Enter new session name</string>	
	<string name="choose_session_action">Choose action</string>
	<string name="choose_participant_action">Choose name info source</string>
	<string name="delete_session">Delete session</string>
	<string name="delete_activity">Delete activity</string>
	<string name="cancel">Cancel</string>	
	<string name="list_of_participants">List of participants</string>
	<string name="add_participant">Add participant</string>
	<string name="participant_name">Enter new participant name</string>		
	<string name="done">Done</string>
	<string name="name_participant">Enter participant name</string>
	<string name="from_text">Enter manually</string>
	<string name="from_contacts">Pick from contacts</string>
	<string name="select_multiple_participants">Who wanted this?</string>
	<string name="select_paying_participants">Who paid for this?</string>
	<string name="expense_label">Label</string>
	<string name="enter_expenditure_per_person">Expenditure per person</string>
	<string name="confirm_payment">Add activity</string>
	<string name="make_settlement">Payback</string>
	<string name="propose_settlements">Who owes how much?</string>
	<string name="end_session">End session</string>
	<string name="select_paying_participant">Select paying participant</string>	
	<string name="select_receiving_particitpant">Select receiving participant</string>
	<string name="ok">OK</string>
	<string name="balance">Balance</string>
	<string name="select_payer">Select payer</string>
	<string name="select_payee">Select payee</string>
	<string name="enter_amount">Enter settlement amount</string>
	<string name="settlement_statement">%1$s has paid %2$s bucks to %3$s</string>
	<string name="settlement_proposal">%1$s could pay %2$s bucks to %3$s</string>
	<string name="suggestion">Maybe you could do this&#8230;</string>	
	<string name="label">Label</string>
	<string name="label_example">e.g. Pizza, Petrol</string>
	<string name="selected_participants">(empty)</string>
	<string name="add">Add</string>
	<string name="oops">Oops</string>
	<string name="all_selected">All participants have already been selected</string>
	<string name="none_selected">No participant has been selected</string>
	<string name="no_label_selected">Looks like you have not entered any label. Labels are necessary to distinguish different payments in the session log. Would you like to add a label now?</string>
	<string name="paid">Paid:</string>
	<string name="payment_statement">Activity %1$s for %2$s worth a total of %3$s was paid by %4$s.</string>
	<string name="kept_change">%1$s kept the change.</string>
	<string name="tagline">One more way to save paper</string>
	<string name="first_time">Looks like this is the first time you are trying the app. Would you like to take a tour?</string>
	<string name="yes_sure">Yes, sure!</string>
	<string name="no_thanks">No, thanks!</string>
	<string name="chapter1title">1. Sessions</string>	
	<string name="chapter2title">2. Participants</string>
	<string name="chapter3title">3. Payments</string>
	<string name="chapter4title">4. Settlements</string>
	<string name="chapter5title">5. Proposed settlements</string>
	<string name="chapter1text">When you\'re with your friends, you wouldn\'t want to waste time thinking about money you\'ve spent. That\'s where RainCheque kicks in. You can create a session every time you\'re out with friends and forget about it.</string>	
	<string name="chapter2text">Each session will have two or more participants. Each person having his own taste, his own money and own balance.</string>
	<string name="chapter3text">When you do any activity, simply add it in the session. The app knows that it\'s not necessary that each person pays equally or that not all persons want the same thing.</string>
	<string name="chapter4text">When any person gives some money to someone else, you can keep that record in this app by making a settlement between two participants.</string>
	<string name="chapter5text">Finally, when it\'s time to end the session (or when you feel settlements are due) let the app do it\'s magic. It will tell you exactly who owes how much and to whom.</string>
	<string name="gotit">Got it!</string>
	<string name="change">Change</string>
	<string name="select_theme">Select application theme</string>
	<string name="switch_theme">Switch theme</string>
	<string name="white">White theme</string>
	<string name="dark">Dark theme</string>
	<string name="session">Session</string>
	<string name="total">Total expenditure</string>
	<string name="participants">Participants</string>
	<string name="show_log">Show log</string>
	<string name="remove_participant">Remove participant</string>
	<string name="cant_remove_participant">You can only remove a participant if he/she is not involved in any activity. To remove, delete the activity %1$s first.</string>
	<string name="cant_remove_participant_balance">You can only remove a participant if he/she has a non-zero balance. To remove, settle this participant\'s accounts first.</string>
	<string name="too_few_participants">Too few participants</string>
	<string name="too_few_participants_description">Since there are not enough participants remaining in this session, it will be closed, unless you add a new participant right now. What would you like to do?</string>
	<string name="too_few_participants_description_2">Since there are not enough participants remaining in this session, you cannot activate it, unless you add a new participant right now. What would you like to do?</string>
	<string name="keep_closed">Keep session closed</string>
	<string name="active">ACTIVE</string>
	<string name="inactive">CLOSED</string>
	<string name="no_name">The contact you\'ve picked has no name.</string>
	<string name="export">Export</string>
	<string name="export_as">Export as&#8230;</string>
	<string name="export_desc">File exported successfully</string>
	<string name="import_file">Import</string>
	<string name="who_kept_the_change">Who kept the change?</string>
	<string name="no_one">No one</string>
	<string name="discard_change">Discard the change</string>
	<string name="import_file_to_raincheque">Import to RainCheque</string>
	<string name="import_file_successful">Imported file successfully</string>
	<string name="share">Share</string>
	<string name="list_of_activities">List of activities</string>
	<string name="activity">Activity %1$s deleted</string>
	<string name="show_all_activities">Show all activities</string>
</resources>