<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item android:id="@+id/conf_payment" android:title="@string/confirm_payment" android:visible="false"></item>
    <item android:id="@+id/m_settlement" android:title="@string/make_settlement" android:visible="false"></item>
    <item android:id="@+id/p_settlement" android:title="@string/propose_settlements" android:visible="false"></item>
    
    <item android:id="@+id/e_session" android:title="@string/edit_session" android:visible="false"></item>
    <item android:id="@+id/a_participant" android:title="@string/add_participant" android:visible="false"></item>
    <item android:id="@+id/s_log" android:title="@string/show_log" android:visible="false"></item>
    <item android:id="@+id/share_session" android:showAsAction="always" android:title="@string/share" style="?actionBarIconShare"></item>
    <item android:id="@+id/export_session" android:showAsAction="always" android:title="@string/export" style="?actionBarIconExport"></item>

</menu>
