<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tvSessionName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.92"
            android:padding="10dp"
            android:text="@string/session"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <ToggleButton
            android:id="@+id/toggleButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOff="@string/inactive"
            android:textOn="@string/active" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvSessionTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/total"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/participants"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:padding="10dp" >

        <ListView
            android:id="@+id/lvAllParticipants"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:background="@drawable/borderui" >

        </ListView>

    </FrameLayout>

</LinearLayout>
