<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/list_of_participants"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ListView
        android:id="@+id/listOfParticipants"
        android:layout_width="match_parent"
        android:layout_height="159dp"
        android:padding="10dp" >

    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal" >

        <Button
            android:id="@+id/buttonAddParticipant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_participant" />

        <Button
            android:id="@+id/buttonDoneAddingParticipants"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/done" />

    </LinearLayout>

</LinearLayout>
